--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,26 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@mipmap/ic_launcher"
+            android:layout_gravity="center_horizontal"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Portfolio App"
+            android:textColor="@color/Accent_Wuito"
+            android:fontFamily="@font/poppins_bold"
+            android:textSize="32sp"
+            android:layout_gravity="center_horizontal"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Rasyid Ramadhani"
-            android:textColor="@color/Accent_Wuito"
+            android:textColor="@color/Accent_Grege"
+            android:fontFamily="@font/poppins_semibold"
+            android:textSize="16sp"
             android:layout_gravity="center_horizontal"
             />
 
