--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.DrXID" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/Sec1_Sekok</item>
+        <item name="colorPrimary">@color/Pri2_Akwa</item>
         <item name="colorPrimaryVariant">@color/Accent_Grege</item>
         <item name="colorOnPrimary">@color/Pri1_Inke</item>
         <!-- Secondary brand color. -->
