--- a/app/src/main/res/layout/activity_landing_loading.xml
+++ b/app/src/main/res/layout/activity_landing_loading.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Sec1_Sekok"
+    android:background="@color/Pri1_Inke"
     android:gravity="center"
     tools:context="com.drxid.porto.load.LandingLoadingActivity">
 
