--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Sec1_Sekok"
+    android:background="@color/Pri1_Inke"
     android:gravity="center"
     tools:context="com.drxid.porto.MainActivity">
 
@@ -18,13 +18,14 @@
             android:id="@+id/img"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@mipmap/ic_launcher_round"
             android:layout_gravity="center_horizontal"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Portfolio App"
             android:textColor="@color/Accent_Wuito"
             android:fontFamily="@font/poppins_bold"
