--- a/app/src/main/res/layout/fragment_profiles.xml
+++ b/app/src/main/res/layout/fragment_profiles.xml
@@ -2,12 +2,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Pri1_Inke"
     tools:context="com.drxid.porto.menufragment.ProfilesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="16dp">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="72dp"
+            android:orientation="vertical"
+            android:layout_gravity="left">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Portfolio App"
+                android:textColor="@color/Accent_Wuito"
+                android:fontFamily="@font/poppins_semibold"
+                android:textSize="20sp"
+                android:layout_gravity="center_horizontal"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Rasyid Ramadhani"
+                android:textColor="@color/Accent_Grege"
+                android:fontFamily="@font/poppins_semibold"
+                android:textSize="16sp"
+                android:layout_gravity="center_horizontal"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:orientation="horizontal"
+            android:layout_gravity="left">
+
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="180dp"
+                android:src="@drawable/img_rasyidphoto"/>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:orientation="vertical"
+                android:layout_gravity="top|left">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Main Skills"
+                    android:textColor="@color/Accent_Wuito"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="16sp"
+                    android:layout_gravity="center_horizontal"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Rasyid Ramadhani"
+                    android:textColor="@color/Accent_Grege"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="16sp"
+                    android:layout_gravity="center_horizontal"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
